<resources>
    <string name="app_name">Teran</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_length_password">Password must be at least 8 characters</string>
    <string name="match_password">Password do not match</string>
    <string name="strong_password">Your password is strong</string>
    <string name="noLetter_password">Password must contain at least one letter</string>
    <string name="noDigit_password">Password must contain at least one Digit</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="got_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="gender">Gender</string>
    <string name="DoB">Date of birth</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="date">xx/xx/xxxx</string>
    <string name="add_title">Add title here...</string>
    <string name="finish">Finish</string>
    <string name="add_content">Tell us how your day\'s going...</string>


    <string name="submit">Submit</string>
    <string name="delete_title">Delete Note</string>
    <string name="message_positive">Yes</string>
    <string name="message_negative">No</string>
    <string name="empty">Field can not be blank</string>
    <string name="message_delete">Are you sure you want to delete this Journal?</string>
    <string name="added">Note has been successfully added.</string>
    <string name="changed">Note has been successfully changed.</string>
    <string name="deleted">Note has been successfully deleted.</string>
    <string name="search_my_journal">Search my journal</string>
    <string name="header">Header</string>

    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_post">Post</string>
    <string name="title_profile">Profile</string>
    <string name="greeting">Halo,</string>
    <string name="username">Ervan Fadillah</string>
    <string name="text_title_survey">Let\'s take the survey</string>
    <string name="text_content_survey">Jawab beberapa pertanyaan, dapatkan hasil dan rekomendasi!.</string>
    <string name="take_survey">Take Survey</string>
    <string name="title_quote">Quote of the day</string>
    <string name="quotes">“Setiap hari adalah langkah maju, tidak peduli seberapa kecil langkah itu. Berbanggalah pada dirimu sendiri karena terus berusaha. Kamu lebih kuat dari yang kamu pikirkan.”</string>
    <string name="title_journal">Journal</string>
    <string name="journal_description">Catatlah suasana hatimu sepanjang hari dan pantau perkembanganmu.</string>
    <string name="title_meditation">Meditation</string>
    <string name="meditation_description">Gunakan pengatur waktu dan dengarkan musik meditasi yang menenangkan.</string>
    <string name="search_post">Search post</string>
    <string name="semua">Semua</string>
    <string name="curhat">Curhat</string>
    <string name="anonymous">Anonim</string>
    <string name="comments">12 Comments</string>
    <string name="time">1 hour ago</string>
    <string name="arry">Arry Kusuma Putra</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter your name</string>
    <string name="title_settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="system_default">System default</string>
    <string name="log_out">Log out</string>
    <string name="email_example">ervan.bungas38@gmail.com</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="ceritakan_hari_kamu">Ceritakan Hari Kamu</string>
    <string name="add">Tambah</string>
    <string name="bahagia">Bahagia 😄</string>
    <string name="tenang">Tenang ☺</string>
    <string name="netral">Netral 🙂</string>
    <string name="cemas">Cemas 😞</string>
    <string name="sedih">Sedih 😭</string>
    <string name="date_example">Selasa, 26 Juni 2004</string>
    <string name="update">Perbarui</string>
    <!--  MESSAGE  -->
    <string name="message_isi_jurnal">Isi Jurnal Kamu Ya</string>
    <string name="message_hapus_jurnal">Berhasil Menghapus Jurnal Kamu</string>
    <string name="message_tambah_jurnal">Berhasil Menambahkan Jurnal Kamu</string>
    <string name="message_memperbarui_jurnal">Berhasil Memperbarui Jurnal Kamu</string>
    <string name="message_ajakan_isi_jurnal">Isi Jurnal Kamu Yuk!</string>
    <!--    -->
    <string name="cari_jurnal_kamu">Cari Jurnal Kamu</string>
    <string name="time_left">sec time left</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="timer_text">+15s</string>
    <string name="set">Set</string>
    <string name="_00s">00s</string>
    <!--  INPUT MESSAGE  -->
    <string name="invalid_format_email">Invalid email format</string>
    <string name="enter_password">Silahkan masukkan password Anda</string>
    <string name="enter_email">Silahkan masukkan email Anda</string>

    <!--  ACTION  -->
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="mulai">Mulai</string>
    <string name="login_dulu_yuk">Login Dulu Yuk!</string>
    <string name="jadi_anonim">Jadi Anonim</string>
    <string name="komentar">Komentar</string>
    <string name="tambah_komentar">Tambah Komentar</string>
    <string name="favorit">Favorit</string>
    <string name="hapus">Hapus</string>
    <string name="retry_connection">Retry Connection</string>

    <!--  ARRAY  -->
    <string-array name="umur_array">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="jurusan_array">
        <item>Administrasi Bisnis</item>
        <item>Administrasi Perkantoran</item>
        <item>Akuntansi</item>
        <item>Aktuaria</item>
        <item>Arsitektur</item>
        <item>Astronomi</item>
        <item>Bahasa Arab</item>
        <item>Bahasa Inggris</item>
        <item>Bahasa Mandarin</item>
        <item>Biologi</item>
        <item>Bioteknologi</item>
        <item>Bisnis Digital</item>
        <item>ekonomi</item>
        <item>Ekonomi</item>
        <item>Farmasi</item>
        <item>Fisika</item>
        <item>Gizi Klinik</item>
        <item>Hukum</item>
        <item>Ilmu Gizi</item>
        <item>Ilmu Kelautan</item>
        <item>Ilmu Komputer</item>
        <item>Ilmu Pengetahuan Manusia</item>
        <item>Ilmu Perpustakaan</item>
        <item>Ilmu biomedis</item>
        <item>Kebidanan</item>
        <item>Kedokteran</item>
        <item>Kehutanan</item>
        <item>Keperawatan</item>
        <item>Kimia</item>
        <item>Komunikasi</item>
        <item>Manajemen</item>
        <item>Matematika</item>
        <item>Mesin</item>
        <item>Olahraga</item>
        <item>Pendidikan Agama Islam</item>
        <item>Pendidikan Islam</item>
        <item>Perbankan</item>
        <item>Pertanian</item>
        <item>Statistika</item>
        <item>Teknik Elektro</item>
        <item>Teknik Fisika</item>
        <item>Teknik Geodesi</item>
        <item>Teknik Geologi</item>
        <item>Teknik Industri</item>
        <item>Teknik Kelautan</item>
        <item>Teknik Kimia</item>
        <item>Teknik Mesin</item>
        <item>Teknik Metalurgi</item>
        <item>Teknik Perkapalan</item>
        <item>Teknik Sipil</item>
    </string-array>
    <string-array name="tahun_studi_array">
        <item>1 Tahun</item>
        <item>2 Tahun</item>
        <item>3 Tahun</item>
        <item>4 Tahun</item>
        <item>5 Tahun</item>
        <item>6 Tahun</item>
    </string-array>
    <string-array name="ipk_array">
        <item>0 - 1.99</item>
        <item>2.00 - 2.49</item>
        <item>2.50 - 2.99</item>
        <item>3.00 - 3.49</item>
        <item>3.50 - 4.00</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_my_post_title">3 Post Created</string>
</resources>