<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home_page.home.HomeFragment">

    <TextView
        android:id="@+id/text_greeting_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/greeting"
        android:textSize="24sp"
       android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_username_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/username"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        app:layout_constraintStart_toEndOf="@+id/text_greeting_home"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/pale_orange"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_greeting_home">

        <TextView
            android:id="@+id/cvText_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_title_survey"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cvText_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="45dp"
            android:text="@string/text_content_survey" />

        <TextView
            android:id="@+id/cvText_Take_Survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="95dp"
            android:text="@string/take_survey"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cvImg_Take_Survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="95dp"
            android:src="@drawable/baseline_arrow_forward_24" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_quote_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_quote"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/text_quote_content"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:text="@string/quotes"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_quote_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_journal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_quote_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/journal"
            android:contentDescription="@string/title_journal"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_journal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:layout_marginTop="10dp"
            android:layout_marginStart="110dp"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="35dp"
            android:text="@string/journal_description"
            android:textSize="13sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_meditation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_journal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/meditation"
            android:contentDescription="@string/title_meditation"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_meditation"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:layout_marginTop="15dp"
            android:layout_marginStart="110dp"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="40dp"
            android:text="@string/meditation_description"
            android:textSize="13sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>