<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="164dp"
    android:layout_margin="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="12dp"
            android:src="@drawable/img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_username_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anonymous"
            android:layout_marginStart="12dp"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <TextView
            android:id="@+id/text_content_post"
            android:layout_width="347dp"
            android:layout_height="51dp"
            android:layout_marginTop="12dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/comment_imageView"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/baseline_comment_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_content_post" />

        <TextView
            android:id="@+id/text_comment_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/comment_imageView"
            app:layout_constraintStart_toEndOf="@+id/comment_imageView"
            app:layout_constraintTop_toTopOf="@+id/comment_imageView" />

        <TextView
            android:id="@+id/text_time_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_comment_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_comment_post" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>